--- a/compose.yaml
+++ b/compose.yaml
@@ -17,7 +17,10 @@ services:
       timeout: 10s
 
   Mongo:
-    build: https://github.com/THD-C/Mongo.git
+    build: 
+      context: https://github.com/THD-C/Mongo.git
+      secrets:
+          - github_token
     image: thd/mongo
     container_name: THD_Mongo
     hostname: Mongo
@@ -26,6 +29,18 @@ services:
       - 27017:27017 
     volumes:
       - MO-Data:/data/db
+
+  Mongo_Manager:
+    build: https://github.com/THD-C/Mongo_Manager.git
+    image: thd/mongo_manager
+    container_name: THD_Mongo_Manager
+    hostname: Mongo_Manager
+    restart: unless-stopped
+    ports:
+      - 50052:50051
+    depends_on:
+      Mongo:
+        condition: service_started
 
   DB_Manager:
     build: https://github.com/THD-C/DB_Manager.git
@@ -63,6 +78,10 @@ services:
       Frontend_API:
         condition: service_started
     
+secrets:
+  github_token:
+    file: ./.github_token
+
 volumes:
   PG-Data:
   MO-Data:
