--- a/compose.yaml
+++ b/compose.yaml
@@ -48,6 +48,8 @@ services:
     container_name: THD_DB_Manager
     hostname: DB_Manager
     restart: unless-stopped
+    environment:
+      POSTGRES_URL: "postgresql://default:PL_tech_hand_elk@Postgres:5432/thdc"
     ports:
       - 50051:50051
     depends_on:
@@ -60,6 +62,11 @@ services:
     container_name: THD_Frontend_API
     hostname: Frontend_API
     restart: unless-stopped
+    environment:
+      - DB_MANAGER_PORT=50051
+      - DB_MANAGER=DB_Manager
+      - MONGO_MANAGER_PORT=50051
+      - MONGO_MANAGER=Mongo_Manager
     ports:
       - 8000:8000
     depends_on:
