add removing volumes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,5 +44,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Stop Existing Containers
+        run: docker compose down -v -t 20 --remove-orphans
+
       - name: Run Containers
         run: docker compose up -d --force-recreate
