add mongo URL to Mongo_Manager

--- a/compose.yaml
+++ b/compose.yaml
@@ -36,6 +36,8 @@ services:
     container_name: THD_Mongo_Manager
     hostname: Mongo_Manager
     restart: unless-stopped
+    environment:
+      MONGO_URL: "mongodb://Mongo:27017"
     ports:
       - 50052:50051
     depends_on:
