--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,4 +52,4 @@ jobs:
           echo "${{ secrets.THDCPL_TOKEN }}" > ./.github_token
 
       - name: Build Images
-        run: docker compose build --no-cache
+        run: docker compose --profile APP build --no-cache
