--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,7 @@
 services:
   Postgres:
+    profiles:
+      - APP
     build: https://github.com/THD-C/Postgres.git
     image: thd/postgres
     container_name: THD_Postgres
@@ -17,6 +19,8 @@ services:
       timeout: 10s
 
   Mongo:
+    profiles:
+      - APP
     build: 
       context: https://github.com/THD-C/Mongo.git
       secrets:
@@ -37,6 +41,8 @@ services:
       timeout: 10s
 
   Mongo_Manager:
+    profiles:
+      - APP
     build: https://github.com/THD-C/Mongo_Manager.git
     image: thd/mongo_manager
     container_name: THD_Mongo_Manager
@@ -51,6 +57,8 @@ services:
         condition: service_started
 
   DB_Manager:
+    profiles:
+      - APP
     build: https://github.com/THD-C/DB_Manager.git
     image: thd/db_manager
     container_name: THD_DB_Manager
@@ -65,6 +73,8 @@ services:
         condition: service_healthy
 
   Frontend_API:
+    profiles:
+      - APP
     build: https://github.com/THD-C/Frontend_API.git
     image: thd/frontend_api
     container_name: THD_Frontend_API
@@ -82,6 +92,8 @@ services:
         condition: service_started
 
   Frontend:
+    profiles:
+      - APP
     build: https://github.com/THD-C/Frontend.git
     image: thd/frontend
     container_name: THD_Frontend
@@ -92,7 +104,85 @@ services:
     depends_on:
       Frontend_API:
         condition: service_started
-    
+
+  memcached:
+    profiles:
+      - Telemetry
+    container_name: MemCached_Tempo
+    restart: unless-stopped
+    image: memcached:${MEMCACHED_VER}
+    ports:
+      - "11211:11211"
+    environment:
+      - MEMCACHED_MAX_MEMORY=64m  # Set the maximum memory usage
+      - MEMCACHED_THREADS=4       # Number of threads to use
+
+  tempo:
+    profiles:
+      - Telemetry
+    container_name: Tempo
+    hostname: Tempo
+    restart: unless-stopped
+    image: grafana/tempo:${TEMPO_VER}
+    command: [ "-config.file=/etc/tempo.yaml" ]
+    volumes:
+      - ./config/tempo.yaml:/etc/tempo.yaml
+      - Tempo_Data:/var/tempo
+    ports:
+      - ${TEMPO_JAEGER_PORT}:14268  # jaeger ingest
+      - ${TEMPO_PORT}:3200   # tempo
+      - ${TEMPO_GRPC}:9095 # tempo grpc
+      - ${TEMPO_OTLP_GRCP}:4317  # otlp grpc
+      - $TEMPO_OTLP_HTTP:4318  # otlp http
+      - ${TEMPO_OTLP_ZIPKIN}:9411   # zipkin
+    depends_on:
+      - memcached
+
+  prometheus:
+    profiles:
+      - Telemetry
+    container_name: Prometheus
+    hostname: Prometheus
+    restart: unless-stopped
+    image: prom/prometheus:${PROMETHEUS_VER}
+    command:
+      - --config.file=/etc/prometheus.yaml
+      - --web.enable-remote-write-receiver
+      - --enable-feature=exemplar-storage
+      - --enable-feature=native-histograms
+      - --storage.tsdb.path=/prometheus
+      - --storage.tsdb.retention.time=14d
+    volumes:
+      - ./config/prometheus.yaml:/etc/prometheus.yaml
+      - Prometheus_Data:/prometheus
+    ports:
+      - ${PROMETHEUS_PORT}:9090
+
+  Grafana:
+      image: ${GRAFANA_IMAGE_NAME}
+      build:
+        context: ./Grafana
+        dockerfile: Dockerfile
+      container_name: ${GRAFANA_CONTAINER_NAME}
+      hostname: ${GRAFANA_HOSTNAME}
+      restart: unless-stopped
+      environment:
+        TZ: ${SYSTEM_TIME_ZONE}
+        GF_DATE_FORMATS_DEFAULT_TIMEZONE: ${SYSTEM_TIME_ZONE}
+      volumes:
+        - ./Grafana/datasources:/etc/grafana/provisioning/datasources
+        # - ./Grafana/dashboards_provisioning:/etc/grafana/provisioning/dashboards
+        # - ./Grafana/dashboards:/var/lib/grafana/dashboards
+        - GF-data:/var/lib/grafana
+      ports:
+        - ${GRAFANA_EXTERNAL_PORT}:3000
+      healthcheck:
+        test: curl --fail http://${GRAFANA_HOSTNAME}:3000/api/health
+        start_period: 2s
+        interval: 3s
+        timeout: 1s
+        retries: 5
+
 secrets:
   github_token:
     file: ./.github_token
@@ -100,3 +190,6 @@ secrets:
 volumes:
   PG-Data:
   MO-Data:
+  Tempo_Data:
+  Prometheus_Data:
+  GF-data:
