--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -25,6 +25,7 @@ env:
 jobs:
   CheckIfRunning:
     uses: THD-C/The_THDc_App/.github/workflows/check-self-hosted-runner.yml@main
+    secrets: inherit
 
 
   Build:
