--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
 
   Build:
     needs: CheckIfRunning
-    if: ${{ needs.CheckIfRunning.outputs.env_up == 'true' }}
+    if: ${{ needs.CheckIfRunning.outputs.isRunnerUp == 'true' }}
     runs-on: self-hosted
     environment: ${{ inputs.environment }}
     steps:
