add option to build mongo

--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -19,6 +19,7 @@ on:
           - 'DB_Manager'
           - 'Frontend_API'
           - 'Frontend'
+          - 'Mongo'
 
 env:
   COMPOSE_PROFILE_NAME: "APP"
