add step to cleanup VM

--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -51,3 +51,6 @@ jobs:
       
       - name: Run Container
         run: docker compose --profile ${{env.COMPOSE_PROFILE_NAME}} up -d ${{inputs.service}} --force-recreate
+
+      - name: Cleau up deployment server
+        run: docker system prune --force --volumes
