--- a/config/tempo.yaml
+++ b/config/tempo.yaml
@@ -3,15 +3,14 @@ server:
   http_listen_port: 3200
   log_level: info
 
-
 cache:
   background:
     writeback_goroutines: 5
   caches:
-  - roles:
-    - frontend-search  
-    memcached: 
-      host: memcached:11211
+    - roles:
+        - frontend-search
+      memcached:
+        host: memcached:11211
 
 query_frontend:
   search:
@@ -21,26 +20,32 @@ query_frontend:
     duration_slo: 5s
 
 distributor:
-  receivers:                           # this configuration will listen on all ports and protocols that tempo is capable of.
-    jaeger:                            # the receives all come from the OpenTelemetry collector.  more configuration information can
-      protocols:                       # be found there: https://github.com/open-telemetry/opentelemetry-collector/tree/main/receiver
-        thrift_http:                   #
-        grpc:                          
+  receivers: # this configuration will listen on all ports and protocols that tempo is capable of.
+    jaeger: # the receives all come from the OpenTelemetry collector.  more configuration information can
+      protocols: # be found there: https://github.com/open-telemetry/opentelemetry-collector/tree/main/receiver
+        thrift_http: #
+        grpc:
         thrift_binary:
         thrift_compact:
     zipkin:
     otlp:
       protocols:
         http:
+          cors:
+            allowed_origins:
+              - "http://localhost/"
+              - "http://localhost:4200/"
+              - "http://thdc/"
+              - "http://thdc.tail8ec47f.ts.net/"
         grpc:
     opencensus:
 
 ingester:
-  max_block_duration: 1m              
+  max_block_duration: 1m
 
 compactor:
   compaction:
-    block_retention: 336h                # default 14d (336h)overall Tempo trace retention.
+    block_retention: 336h # default 14d (336h)overall Tempo trace retention.
 
 metrics_generator:
   registry:
@@ -57,9 +62,9 @@ metrics_generator:
 
 storage:
   trace:
-    backend: local                     # backend configuration to use
+    backend: local # backend configuration to use
     wal:
-      path: /var/tempo/wal             # where to store the wal locally
+      path: /var/tempo/wal # where to store the wal locally
     local:
       path: /var/tempo/blocks
 
