--- a/compose.yaml
+++ b/compose.yaml
@@ -185,6 +185,20 @@ services:
         timeout: 1s
         retries: 5
 
+  Nginx:
+    profiles:
+      - Telemetry
+    image: nginxproxy/nginx-proxy:1.6-alpine
+    container_name: Nginx
+    hostname: Nginx
+    restart: unless-stopped
+    ports:
+      - 1234:80
+    volumes:
+      - /var/run/docker.sock:/tmp/docker.sock:ro
+      - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
+      
+
 secrets:
   github_token:
     file: ./.github_token
