--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,14 +8,16 @@ http {
     location / {
       # Handle preflight OPTIONS requests
       if ($request_method = OPTIONS) {
-        add_header Access-Control-Allow-Origin "http://localhost:4200";
+        add_header Access-Control-Allow-Origin "http://localhost:4200, http://thdc";
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
         add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         add_header Access-Control-Allow-Credentials "true";
         return 204;
       }
+      
       proxy_pass http://Tempo:4318/;
-      add_header Access-Control-Allow-Origin "http://localhost:4200";
+
+      add_header Access-Control-Allow-Origin "http://localhost:4200, http://thdc";
       add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
       add_header Access-Control-Allow-Headers "Content-Type, Authorization";
       add_header Access-Control-Allow-Credentials "true";
