set CORS for prod ONLY

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,7 +8,7 @@ http {
     location / {
       # Handle preflight OPTIONS requests
       if ($request_method = OPTIONS) {
-        add_header Access-Control-Allow-Origin "http://localhost:4200, http://thdc";
+        add_header Access-Control-Allow-Origin "http://thdc";
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
         add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         add_header Access-Control-Allow-Credentials "true";
@@ -17,7 +17,7 @@ http {
       
       proxy_pass http://Tempo:4318/;
 
-      add_header Access-Control-Allow-Origin "http://localhost:4200, http://thdc";
+      add_header Access-Control-Allow-Origin "http://thdc";
       add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
       add_header Access-Control-Allow-Headers "Content-Type, Authorization";
       add_header Access-Control-Allow-Credentials "true";
