--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -19,6 +19,7 @@ on:
           - 'DB_Manager'
           - 'Frontend_API'
           - 'Frontend'
+          - 'CoinGecko_API'
           - 'Mongo'
 
 env:
