--- a/config/prometheus.yaml
+++ b/config/prometheus.yaml
@@ -14,5 +14,6 @@ scrape_configs:
       - targets: [
           "Mongo_Manager:8111",
           "DB_Manager:8111",
-          "Frontend_API:8111"
+          "Frontend_API:8111",
+          "CoinGecko_API:8111"
         ]
