configure missing healthcheck

--- a/compose.yaml
+++ b/compose.yaml
@@ -72,6 +72,12 @@ services:
       MONGO_URL: "mongodb://Mongo:27017"
     ports:
       - 50052:50051
+    healthcheck:
+      test: ["CMD", "python", "HealthCheck.py"]
+      interval: 30s          
+      timeout: 5s            
+      retries: 3             
+      start_period: 5s   
     depends_on:
       Mongo:
         condition: service_healthy
