--- a/compose.yaml
+++ b/compose.yaml
@@ -142,6 +142,12 @@ services:
     restart: unless-stopped
     ports:
       - 80:80
+    healthcheck:
+      test: curl --fail http://Frontend/en/home
+      interval: 30s          
+      timeout: 5s            
+      retries: 3             
+      start_period: 5s  
     depends_on:
       Frontend_API:
         condition: service_healthy
