add Frontend build config

--- a/compose.yaml
+++ b/compose.yaml
@@ -135,7 +135,11 @@ services:
   Frontend:
     profiles:
       - APP
-    build: https://github.com/THD-C/Frontend.git
+    build: 
+      context: https://github.com/THD-C/Frontend.git
+      args:
+        - TEMPO_URL=http://thdc:1234/v1/traces
+        - API_URL=http://thdc:8000/api
     image: thd/frontend
     container_name: THD_Frontend
     hostname: Frontend
