--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,7 +5,20 @@ http {
   server {
     listen 80;
 
-    location / {
+    server_name thdc;
+
+    location /api {
+        proxy_pass http://Frontend_API:8000/;
+    }
+    location /docs {
+        proxy_pass http://Frontend_API:8000/docs;
+    }
+    location /openapi.json {
+        proxy_pass http://Frontend_API:8000/openapi.json;
+    }
+
+    location /tempo {
+
       # Handle preflight OPTIONS requests
       if ($request_method = OPTIONS) {
         add_header Access-Control-Allow-Origin "http://thdc";
@@ -15,7 +28,7 @@ http {
         return 204;
       }
       
-      proxy_pass http://Tempo:4318/;
+      proxy_pass http://Tempo:4318/v1/traces;
 
       add_header Access-Control-Allow-Origin "http://thdc";
       add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
