--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -5,10 +5,15 @@ http {
   server {
     listen 80;
 
-    server_name thdc;
+    server_name thdc thdc.tail8ec47f.ts.net; # Tailscale VPN domain
+
+    location / {
+      proxy_set_header X-App-Server "$server_name";
+      proxy_pass http://Frontend;
+    }
 
     location /api {
-        proxy_pass http://Frontend_API:8000/;
+        proxy_pass http://Frontend_API:8000;
     }
     location /docs {
         proxy_pass http://Frontend_API:8000/docs;
@@ -21,7 +26,7 @@ http {
 
       # Handle preflight OPTIONS requests
       if ($request_method = OPTIONS) {
-        add_header Access-Control-Allow-Origin "http://thdc";
+        add_header Access-Control-Allow-Origin "http://$server_name";
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
         add_header Access-Control-Allow-Headers "Content-Type, Authorization";
         add_header Access-Control-Allow-Credentials "true";
@@ -30,7 +35,7 @@ http {
       
       proxy_pass http://Tempo:4318/v1/traces;
 
-      add_header Access-Control-Allow-Origin "http://thdc";
+      add_header Access-Control-Allow-Origin "http://$server_name";
       add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
       add_header Access-Control-Allow-Headers "Content-Type, Authorization";
       add_header Access-Control-Allow-Credentials "true";
