--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -2,10 +2,27 @@ events {
 
 }
 http {
+  log_format json_combined escape=json '{'
+        '"time_local":"$time_local",'
+        '"remote_addr":"$remote_addr",'
+        '"server_name":"$server_name",'
+        '"request":"$request",'
+        '"status": "$status",'
+        '"body_bytes_sent":"$body_bytes_sent",'
+        '"http_traceparent":"$http_traceparent",'
+        '"http_referer":"$http_referer",'
+        '"request_time":"$request_time",'
+        '"upstream_response_time":"$upstream_response_time",'
+        '"upstream_addr":"$upstream_addr",'
+        '"upstream_status":"$upstream_status"'
+    '}';
+
+  access_log /var/log/nginx_access.log json_combined;
+
   server {
     listen 80;
 
-    server_name thdc thdc.tail8ec47f.ts.net; # Tailscale VPN domain
+    server_name localhost thdc thdc.tail8ec47f.ts.net; # Tailscale VPN domain
 
     location / {
       proxy_set_header X-App-Server "$server_name";
