--- a/compose.yaml
+++ b/compose.yaml
@@ -212,6 +212,23 @@ services:
     ports:
       - ${PROMETHEUS_PORT}:9090
 
+  Loki:
+    profiles:
+      - Telemetry
+    image: grafana/loki:2.9.0
+    container_name: Loki
+    hostname: Loki
+    environment:
+      TZ: Europe/Warsaw
+    restart: unless-stopped
+    command:
+      -config.file=/etc/loki/loki.yaml
+    volumes:
+      - ./config/loki.yaml:/etc/loki/loki.yaml
+      - LK-data:/loki
+    ports:
+      - 3100:3100
+
   Grafana:
       profiles:
         - Telemetry
@@ -251,7 +268,25 @@ services:
     volumes:
       - /var/run/docker.sock:/tmp/docker.sock:ro
       - ./config/nginx.conf:/etc/nginx/nginx.conf:ro
-      
+      - NG-log:/var/log
+
+  Promtail:
+    profiles:
+      - APP
+    image: grafana/promtail:2.9.0
+    container_name: Promtail
+    hostname: Promtail
+    environment:
+      TZ: Europe/Warsaw
+    restart: unless-stopped
+    command:
+      -config.file=/etc/promtail/promtail.yaml
+    volumes:
+      - ./config/promtail.yaml:/etc/promtail/promtail.yaml
+      - NG-log:/var/log/work/
+    ports:
+      - 9080:9080
+
 
 secrets:
   github_token:
@@ -263,3 +298,5 @@ volumes:
   Tempo_Data:
   Prometheus_Data:
   GF-data:
+  LK-data:
+  NG-log:
