--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -4,9 +4,10 @@ events {
 http {
   log_format json_combined escape=json '{'
         '"time_local":"$time_local",'
-        '"remote_addr":"$remote_addr",'
         '"server_name":"$server_name",'
-        '"request":"$request",'
+        '"request_uri":"$request_uri",'
+        '"request_method":"$request_method",'
+        '"remote_addr":"$remote_addr",'
         '"status": "$status",'
         '"body_bytes_sent":"$body_bytes_sent",'
         '"http_traceparent":"$http_traceparent",'
