--- a/config/promtail.yaml
+++ b/config/promtail.yaml
@@ -3,29 +3,39 @@ server:
   grpc_listen_port: 0
 
 positions:
-  filename: /var/lib/promtail/positions.yaml
+  filename: /var/lib/positions.yaml
 
 clients:
   - url: http://Loki:3100/loki/api/v1/push
 
 scrape_configs:
-
-- job_name: Nginx
+- job_name: App_Proxy
   pipeline_stages:
     - json:
         expressions:
           timestamp: time_local
           server_name: server_name
-          request: request
+          request_uri: request_uri
+          request_method: request_method
           status: status
           upstream_status: upstream_status
           traceparent: http_traceparent
           http_referer: http_referer
+    - replace:
+        source: traceparent
+        expression: "^(00-)[0-9a-f]{32}(-[0-9a-f]{16}-01)$"
+        target: extracted_trace_id
+    - output:
+        source: extracted_trace_id
     - labels:
-        request:
-        status:
-        traceparent:
-        http_referer:
+        traceID: traceparent
+        timestamp: time_local
+        server_name: server_name
+        request_uri: request_uri
+        request_method: request_method
+        status: status
+        upstream_status: upstream_status
+        http_referer: http_referer
     - timestamp:
         source: timestamp
         format: "02/Jan/2006:15:04:05 -0700"
@@ -34,5 +44,5 @@ scrape_configs:
   - targets:
       - localhost
     labels:
-      Service: Nginx
+      Service: App_Proxy
       __path__: /var/log/work/*.log
