--- a/.github/workflows/deploy-service.yml
+++ b/.github/workflows/deploy-service.yml
@@ -19,8 +19,9 @@ on:
           - 'DB_Manager'
           - 'Frontend_API'
           - 'Frontend'
-          - 'CoinGecko_API'
           - 'Mongo'
+          - 'CoinGecko_API'
+          - 'Order_Service'
 
 env:
   COMPOSE_PROFILE_NAME: "APP"
