--- a/compose.yaml
+++ b/compose.yaml
@@ -12,11 +12,11 @@ services:
   Grafana:
     profiles:
       - Telemetry
-    image: ${GRAFANA_IMAGE_NAME}
+    image: thdc/grafana
     build:
       context: ./Grafana
       dockerfile: Dockerfile
-    container_name: ${GRAFANA_CONTAINER_NAME}
+    container_name: Grafana
     hostname: Grafana
     restart: unless-stopped
     environment:
