--- a/Docker/database.docker-compose.yaml
+++ b/Docker/database.docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     #   - 5432:5432
     volumes:
       - PostgresData:/var/lib/postgresql/data
+    networks:
+      - PostgresNet
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U default -d thdc"]
       interval: 10s
@@ -33,6 +35,8 @@ services:
     #   - 27017:27017 
     volumes:
       - MongoData:/data/db
+    networks:
+      - MongoNet
     healthcheck:
       test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
