--- a/Docker/frontend.docker-compose.yaml
+++ b/Docker/frontend.docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     restart: unless-stopped
     # ports:
     #   - 80:80
+    networks:
+      - MicroservicesNet
     healthcheck:
       test: curl --fail http://Frontend/en/home
       interval: 30s          
