--- a/Docker/telemetry.docker-compose.yaml
+++ b/Docker/telemetry.docker-compose.yaml
@@ -1,17 +1,41 @@
 services:
-  memcached:
+  # memcached:
+  #   profiles:
+  #     - Telemetry
+  #   container_name: MemCached_Tempo
+  #   restart: unless-stopped
+  #   image: memcached:1.6.29
+  #   # ports:
+  #   #   - "11211:11211"
+  #   environment:
+  #     - MEMCACHED_MAX_MEMORY=256m  # Set the maximum memory usage
+  #     - MEMCACHED_THREADS=4       # Number of threads to use
+  #   networks:
+  #     - MicroservicesNet
+  #   healthcheck:
+  #     test: ["CMD", "sh", "-c", "echo stats | telnet memcached 11211"]
+  #     interval: 30s
+  #     timeout: 10s
+  #     retries: 3
+  #     start_period: 5s
+
+  redis:
     profiles:
       - Telemetry
-    container_name: MemCached_Tempo
+    container_name: Redis
+    hostname: Redis
     restart: unless-stopped
-    image: memcached:1.6.29
+    image: redis:6.2.6
     # ports:
-    #   - "11211:11211"
-    environment:
-      - MEMCACHED_MAX_MEMORY=64m  # Set the maximum memory usage
-      - MEMCACHED_THREADS=4       # Number of threads to use
+    #   - 6379:6379
     networks:
       - MicroservicesNet
+    healthcheck:
+      test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
   tempo:
     profiles:
@@ -33,8 +57,14 @@ services:
     #   - ${TEMPO_OTLP_ZIPKIN}:9411   # zipkin
     networks:
       - MicroservicesNet
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--no-verbose", "--tries=1", "http://Tempo:3200/ready"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
     depends_on:
-      - memcached
+      - redis
 
   prometheus:
     profiles:
@@ -57,6 +87,12 @@ services:
       - MicroservicesNet
     # ports:
     #   - ${PROMETHEUS_PORT}:9090
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--no-verbose", "--tries=1", "http://Prometheus:9090/metrics"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
   Loki:
     profiles:
@@ -76,6 +112,12 @@ services:
       - MicroservicesNet
     # ports:
     #   - 3100:3100
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "--no-verbose", "--tries=1", "http://Loki:3100/ready"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
 
   Promtail:
     profiles:
@@ -95,3 +137,9 @@ services:
       - MicroservicesNet
     # ports:
     #   - 9080:9080
+    healthcheck:
+      test: ["CMD-SHELL", "bash -c 'printf \"GET / HTTP/1.1\n\n\" > /dev/tcp/127.0.0.1/9080; exit $?;'"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
