--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -59,4 +59,13 @@ http {
       add_header Access-Control-Allow-Credentials "true";
     }
   }
+  server {
+    listen 80;
+
+    server_name App_Proxy;
+
+    location /ready {
+      return 200;
+    }
+  }
 }
