add internal net for Redis

--- a/Docker/network.docker-compose.yaml
+++ b/Docker/network.docker-compose.yaml
@@ -11,3 +11,6 @@ networks:
   PostgresNet:
     name: Postgres Network
     internal: true
+  RedisNet:
+    name: Redis Network
+    internal: true
