--- a/Docker/telemetry.docker-compose.yaml
+++ b/Docker/telemetry.docker-compose.yaml
@@ -1,24 +1,4 @@
 services:
-  # memcached:
-  #   profiles:
-  #     - Telemetry
-  #   container_name: MemCached_Tempo
-  #   restart: unless-stopped
-  #   image: memcached:1.6.29
-  #   # ports:
-  #   #   - "11211:11211"
-  #   environment:
-  #     - MEMCACHED_MAX_MEMORY=256m  # Set the maximum memory usage
-  #     - MEMCACHED_THREADS=4       # Number of threads to use
-  #   networks:
-  #     - MicroservicesNet
-  #   healthcheck:
-  #     test: ["CMD", "sh", "-c", "echo stats | telnet memcached 11211"]
-  #     interval: 30s
-  #     timeout: 10s
-  #     retries: 3
-  #     start_period: 5s
-
   redis:
     profiles:
       - Telemetry
@@ -29,7 +9,7 @@ services:
     # ports:
     #   - 6379:6379
     networks:
-      - MicroservicesNet
+      - RedisNet
     healthcheck:
       test: [ "CMD", "redis-cli", "--raw", "incr", "ping" ]
       interval: 30s
@@ -57,6 +37,7 @@ services:
     #   - ${TEMPO_OTLP_ZIPKIN}:9411   # zipkin
     networks:
       - MicroservicesNet
+      - RedisNet
     healthcheck:
       test: ["CMD", "wget", "--spider", "--no-verbose", "--tries=1", "http://Tempo:3200/ready"]
       interval: 30s
