--- a/Docker/telemetry.docker-compose.yaml
+++ b/Docker/telemetry.docker-compose.yaml
@@ -1,8 +1,8 @@
 services:
-  redis:
+  Redis:
     profiles:
       - Telemetry
-    container_name: Redis
+    container_name: THD_Redis
     hostname: Redis
     restart: unless-stopped
     image: redis:6.2.6
@@ -17,10 +17,10 @@ services:
       retries: 3
       start_period: 5s
 
-  tempo:
+  Tempo:
     profiles:
       - Telemetry
-    container_name: Tempo
+    container_name: THD_Tempo
     hostname: Tempo
     restart: unless-stopped
     image: grafana/tempo:main-a46ac6d
@@ -45,12 +45,15 @@ services:
       retries: 3
       start_period: 5s
     depends_on:
-      - redis
+      Redis:
+        condition: service_healthy
+      Prometheus:
+        condition: service_healthy
 
-  prometheus:
+  Prometheus:
     profiles:
       - Telemetry
-    container_name: Prometheus
+    container_name: THD_Prometheus
     hostname: Prometheus
     restart: unless-stopped
     image: prom/prometheus:v2.54.1
@@ -79,7 +82,7 @@ services:
     profiles:
       - Telemetry
     image: grafana/loki:2.9.0
-    container_name: Loki
+    container_name: THD_Loki
     hostname: Loki
     environment:
       TZ: Europe/Warsaw
@@ -104,7 +107,7 @@ services:
     profiles:
       - Telemetry
     image: grafana/promtail:2.9.0
-    container_name: Promtail
+    container_name: THD_Promtail
     hostname: Promtail
     environment:
       TZ: Europe/Warsaw
@@ -124,3 +127,6 @@ services:
       timeout: 5s
       retries: 3
       start_period: 5s
+    depends_on:
+      Loki:
+        condition: service_healthy
