--- a/Docker/microservices.docker-compose.yaml
+++ b/Docker/microservices.docker-compose.yaml
@@ -1,18 +1,41 @@
 services:
-  # Order_Service:
-  #   build: https://github.com/THD-C/Order_Service.git
-  #   image: thd/order_manager
-  #   container_name: THD_Order_Service
-  #   hostname: Order_Service
-  #   restart: unless-stopped
-  #   # ports:
-  #   #   - 50054:50051
+  Order_Service:
+    build: https://github.com/THD-C/Order_Service.git
+    image: thd/order_service
+    deploy:
+      resources:
+        limits:
+          cpus: '2.00'
+          memory: 500M
+        reservations:
+          cpus: '0.50'
+          memory: 100M
+    container_name: THD_Order_Service
+    hostname: Order_Service
+    restart: unless-stopped
+    # ports:
+    #   - 50054:50051
+    networks:
+      - MicroservicesNet
+    depends_on:
+      DB_Manager:
+        condition: service_healthy
+      CoinGecko_API:
+        condition: service_healthy
 
   CoinGecko_API:
     profiles:
       - APP
     build: https://github.com/THD-C/CoinGecko_API.git
     image: thd/coin_gecko_api
+    deploy:
+      resources:
+        limits:
+          cpus: '1.00'
+          memory: 500M
+        reservations:
+          cpus: '0.25'
+          memory: 300M
     container_name: THD_CoinGecko_API
     hostname: CoinGecko_API
     restart: unless-stopped
@@ -38,6 +61,14 @@ services:
       - APP
     build: https://github.com/THD-C/Mongo_Manager.git
     image: thd/mongo_manager
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 200M
+        reservations:
+          cpus: '0.25'
+          memory: 75M
     container_name: THD_Mongo_Manager
     hostname: Mongo_Manager
     restart: unless-stopped
@@ -63,6 +94,14 @@ services:
       - APP
     build: https://github.com/THD-C/DB_Manager.git
     image: thd/db_manager
+    deploy:
+      resources:
+        limits:
+          cpus: '1.00'
+          memory: 300M
+        reservations:
+          cpus: '0.25'
+          memory: 100M
     container_name: THD_DB_Manager
     hostname: DB_Manager
     restart: unless-stopped
