--- a/Docker/telemetry.docker-compose.yaml
+++ b/Docker/telemetry.docker-compose.yaml
@@ -6,6 +6,11 @@ services:
     hostname: Redis
     restart: unless-stopped
     image: redis:6.2.6
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 300M
     # ports:
     #   - 6379:6379
     networks:
@@ -24,6 +29,14 @@ services:
     hostname: Tempo
     restart: unless-stopped
     image: grafana/tempo:main-a46ac6d
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 600M
+        reservations:
+          cpus: '0.25'
+          memory: 400M
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
       - ./../config/tempo.yaml:/etc/tempo.yaml
@@ -57,6 +70,11 @@ services:
     hostname: Prometheus
     restart: unless-stopped
     image: prom/prometheus:v2.54.1
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 200M
     command:
       - --config.file=/etc/prometheus.yaml
       - --web.enable-remote-write-receiver
@@ -82,6 +100,11 @@ services:
     profiles:
       - Telemetry
     image: grafana/loki:2.9.0
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 200M
     container_name: THD_Loki
     hostname: Loki
     environment:
@@ -107,6 +130,11 @@ services:
     profiles:
       - Telemetry
     image: grafana/promtail:2.9.0
+    deploy:
+      resources:
+        limits:
+          cpus: '0.50'
+          memory: 100M
     container_name: THD_Promtail
     hostname: Promtail
     environment:
